--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "openzeppelin-solidity": "^2.3.0"
+    "bignumber.js": "^9.0.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": " ^7.0.0",
+    "chai-bignumber": "^2.0.2",
+    "ganache-cli": "^6.7.0",
+    "openzeppelin-solidity": "^2.3.0",
+    "web3": "^1.2.1"
   }
 }
